--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Hit Movies</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="menu_start">Inicio</string>
+    <string name="menu_search">Buscar</string>
+    <string name="menu_add">Add</string>
+    <string name="menu_soon">Breve</string>
+    <string name="menu_download">Downloads</string>
 </resources>
